...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zIy-g8-Sk5">
                                <rect key="frame" x="117" y="131" width="60" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="nextCar"/>
                                <state key="normal" title="Next Car"/>
                                <connections>
                                    <action selector="nextCar:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ieV-Br-YI0"/>
                                </connections>
                            </button>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="AZ6-Qf-gJp">
                                <rect key="frame" x="331.5" y="181.5" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="engineAndExhaustSwitch"/>
                                <connections>
                                    <action selector="engineAndExhaustPackageToggle:" destination="BYZ-38-t0r" eventType="valueChanged" id="2L7-5v-kEg"/>
                                </connections>
                            </switch>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="PCK-aH-fwY">
                                <rect key="frame" x="331.5" y="222.5" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="tiresSwitch"/>
                                <connections>
                                    <action selector="tiresPackageToggle:" destination="BYZ-38-t0r" eventType="valueChanged" id="AgP-im-1MT"/>
                                </connections>
                            </switch>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tires Package (Cost: 500)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UfQ-Py-Gdt">
                                <rect key="frame" x="17.5" y="227.5" width="200" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remaining Funds" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MY1-LT-vwE">
                                <rect key="frame" x="249" y="324.5" width="131.5" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="remainingFunds"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Transmission Package (Cost: 1000)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lLJ-B4-Oft">
                                <rect key="frame" x="17.5" y="268.5" width="270" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="jQE-8V-KHe">
                                <rect key="frame" x="331.5" y="263.5" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="transmissionSwitch"/>
                                <connections>
                                    <action selector="transmissionPackageToggle:" destination="BYZ-38-t0r" eventType="valueChanged" id="5vX-Nh-TOM"/>
                                </connections>
                            </switch>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Engine &amp; Exhaust Package (Cost: 500)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MTK-Pl-Q9y">
                                <rect key="frame" x="17.5" y="186.5" width="295" height="21"/>
...
                                <connections>
                                    <action selector="displayAlert:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IPr-Yc-zfA"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Selected Car Statistics" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZcE-sq-00j">
                                <rect key="frame" x="120.5" y="85" width="173.5" height="20.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="selectedCarStatistics"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
...
