...
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ReversePolishNotationCalculator" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Display" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rSb-6r-frP">
                                <rect key="frame" x="168.66666666666666" y="84" width="77" height="26.666666666666671"/>
                                <accessibility key="accessibilityConfiguration" identifier="Display"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
...
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tkg-5x-e6D">
                                <rect key="frame" x="271.66666666666669" y="458" width="71" height="58"/>
                                <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <inset key="contentEdgeInsets" minX="16" minY="20" maxX="16" maxY="20"/>
                                <state key="normal" title="Clear">
                                    <color key="titleColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                </state>
                                <connections>
                                    <action selector="clear:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Vwx-9v-prY"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2l5-US-U54">
                                <rect key="frame" x="70.666666666666671" y="458" width="73.000000000000014" height="58"/>
                                <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <inset key="contentEdgeInsets" minX="5" minY="20" maxX="5" maxY="20"/>
                                <state key="normal" title="Evaluate">
                                    <color key="titleColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                </state>
                                <connections>
                                    <action selector="evaluate:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VWI-na-o3J"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EgM-DB-jdE">
                                <rect key="frame" x="70" y="556" width="138" height="58"/>
                                <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <inset key="contentEdgeInsets" minX="49" minY="20" maxX="49" maxY="20"/>
                                <state key="normal" title="Enter">
                                    <color key="titleColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                </state>
                                <connections>
                                    <action selector="enter:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1VL-1K-2rE"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qOz-FJ-vC4">
                                <rect key="frame" x="207.66666666666663" y="556" width="135" height="58"/>
                                <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <inset key="contentEdgeInsets" minX="56" minY="20" maxX="56" maxY="20"/>
                                <state key="normal" title="+/-">
                                    <color key="titleColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                </state>
                                <connections>
                                    <action selector="changeSign:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tVE-tj-ErD"/>
                                </connections>
                            </button>
...
